Revise OfflineSessionClient